<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ForgotFragment">

    <ImageView
        android:id="@+id/im_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/logo_greent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_verification"
        style="@style/TopHeadingStyleTextView"
        android:text="@string/verification"
        android:textColor="@color/tech_arion"
        app:layout_constraintStart_toStartOf="@id/im_logo"
        app:layout_constraintTop_toBottomOf="@+id/im_logo"
        app:layout_constraintEnd_toEndOf="@+id/im_logo"/>

    <com.goodiebag.pinview.Pinview
        android:id="@+id/et_verifyOtp"
        app:pinBackground="@drawable/bg_verfiy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:pinWidth="60dp"
        app:pinHeight="50dp"
        app:pinLength="4"
        app:cursorVisible="false"
        app:forceKeyboard="true"
        app:hint="0"
        app:inputType="number"
        app:password="false"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_verification"
        app:layout_constraintStart_toStartOf="@id/tv_verification"
        app:layout_constraintEnd_toEndOf="@+id/tv_verification"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVerify"
        style="@style/ButtonStyle"
        android:layout_height="52dp"
        android:layout_width="match_parent"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_marginTop="24sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/tech_arion"
        app:layout_constraintStart_toStartOf="@id/et_verifyOtp"
        app:layout_constraintEnd_toEndOf="@+id/et_verifyOtp"
        app:layout_constraintTop_toBottomOf="@id/et_verifyOtp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_resend_otp"
        style="@style/txtView"
        android:text="@string/didnot"
        android:layout_marginTop="12dp"
        android:textColor="@color/button_txt_color"
        app:layout_constraintTop_toBottomOf="@+id/btnVerify"
        app:layout_constraintStart_toStartOf="@+id/btnVerify"
        app:layout_constraintEnd_toEndOf="@+id/btnVerify"/>







</androidx.constraintlayout.widget.ConstraintLayout>