<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.ProfileFragment">



    <ImageView
        android:id="@+id/im_back_arrow"
        android:layout_width="32dp"
        android:layout_height="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvProfile"
        style="@style/txtView"
        android:text="Profile"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:layout_gravity="center"
        android:src="@drawable/ms_dhoni"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/tech_arion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


            <ImageView
                android:id="@+id/imCamera"
                android:layout_width="30dp"
                android:layout_height="30dp"

                android:background="@drawable/circle"
                android:padding="6dp"
                android:src="@drawable/ic_baseline_photo_camera_24"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.315"
                app:layout_constraintStart_toStartOf="@+id/profile_image"
                app:layout_constraintTop_toTopOf="@+id/profile_image"
                app:layout_constraintVertical_bias="0.828" />

            <TextView
        android:id="@+id/tv_name"
        style="@style/txtView"
        android:text="Name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_job_profile"
        style="@style/txtView"
        android:layout_marginTop="0dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvFirstName"
        style="@style/ProfileTextViewTopHeadingSize"
        android:layout_marginTop="2dp"
        android:text="@string/full_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_job_profile" />



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etFirstName"
        style="@style/ProfileUpdateScreenEditText"
        android:background="@drawable/readble_only"
        android:hint="@string/first_name"
        android:enabled="false"
        android:digits="AqwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSZXCVBNM"
        android:textCursorDrawable="@drawable/cursor_color"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="@+id/tvFirstName"
        app:layout_constraintStart_toStartOf="@+id/tvFirstName"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />





    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEmail"
        style="@style/ProfileTextViewTopHeadingSize"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        style="@style/ProfileUpdateScreenEditText"
        android:hint="Email"
        android:enabled="false"
        android:textCursorDrawable="@drawable/cursor_color"
        android:inputType="textEmailAddress"
        android:background="@drawable/readble_only"
        app:layout_constraintEnd_toEndOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPhone"
        style="@style/ProfileTextViewTopHeadingSize"
        android:text="Phone"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPhone"
        style="@style/ProfileUpdateScreenEditText"
        android:hint="Mobile"
        android:inputType="number"
        android:textCursorDrawable="@drawable/cursor_color"
        android:maxLength="15"
        android:textColor="@color/black"
        android:background="@drawable/profile_bg"
        app:layout_constraintEnd_toEndOf="@+id/tvPhone"
        app:layout_constraintStart_toStartOf="@+id/tvPhone"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_designation"
        style="@style/ProfileTextViewTopHeadingSize"
        android:text="@string/designation"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_designation"
        style="@style/ProfileUpdateScreenEditText"
        android:hint="Android Developer"
        android:digits=" qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
        android:textCursorDrawable="@drawable/cursor_color"
        android:inputType="textCapSentences"
        android:maxLength="15"
        android:textColor="@color/black"
        android:background="@drawable/profile_bg"
        app:layout_constraintEnd_toEndOf="@+id/tvPhone"
        app:layout_constraintStart_toStartOf="@+id/tv_designation"
        app:layout_constraintTop_toBottomOf="@+id/tv_designation"/>

<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:id="@+id/tv_date_of_Join"-->
<!--            style="@style/ProfileTextViewTopHeadingSize"-->
<!--            android:text="Joined Date"-->
<!--            android:textColor="@color/black"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/et_designation" />-->

<!--            <LinearLayout-->
<!--                android:id="@+id/ll"-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="52dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:background="@drawable/profile_bg"-->
<!--                app:layout_constraintStart_toStartOf="@+id/tv_date_of_Join"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/tv_date_of_Join">-->


<!--                <TextView-->
<!--                    android:id="@+id/tvdate_of_Join"-->
<!--                    style="@style/txtView"-->
<!--                    android:layout_marginTop="0dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_width="90dp"-->
<!--                    android:text="10-06-2022"-->
<!--                    android:textSize="12sp"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:layout_marginStart="18dp"/>-->

<!--                <ImageView-->
<!--                    android:id="@+id/im_calender"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center|end"-->
<!--                    android:background="@drawable/ic_baseline_calendar_month_24"/>-->

<!--            </LinearLayout>-->

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_gender"
                style="@style/ProfileTextViewTopHeadingSize"
                android:text="Gender"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_designation" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_gender"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                style="@style/ProfileUpdateScreenEditText"
                android:layout_marginTop="8dp"
                android:hint="Male"
                android:inputType="textCapSentences"
                android:digits="qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
                android:textCursorDrawable="@drawable/cursor_color"
                android:maxLength="15"
                android:textColor="@color/black"
                android:background="@drawable/profile_bg"
                app:layout_constraintStart_toStartOf="@+id/tv_gender"
                app:layout_constraintTop_toBottomOf="@+id/tv_gender"/>

            <com.google.android.material.button.MaterialButton
        android:id="@+id/btUpdate"
        style="@style/ButtonStyle"
        android:text="UpdateProfile"
        android:textColor="@color/white"
                android:layout_marginTop="32dp"
        android:backgroundTint="@color/button_txt_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_gender" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="150dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="22dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:indeterminateTint="@color/white"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/tech_arion"
                android:visibility="gone"
                android:indeterminateTintMode="src_atop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_gender"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>

